--- a/src/main/resources/views/scheme-editor.fxml
+++ b/src/main/resources/views/scheme-editor.fxml
@@ -1,18 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import java.lang.Object?>
-<?import javafx.scene.Parent?>
-<?import javafx.scene.Scene?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
 <!--
 Автор: vladimir_shi
@@ -23,6 +11,7 @@
 - ComboBox для выбора прибора из списка.
 - Кнопки для действий: Сохранить, загрузить, новый.
 -->
+
 <BorderPane xmlns="http://javafx.com/javafx/23"
              xmlns:fx="http://javafx.com/fxml/1"
              fx:controller="com.kipia.management.kipia_management.controllers.SchemeEditorController"
@@ -41,8 +30,12 @@
         <!-- Панель инструментов -->
         <ToolBar>
             <Button fx:id="selectToolBtn" styleClass="tool-button" text="Выбрать"/>
+            <Button fx:id="undoBtn" styleClass="tool-button" text="Отменить"/>
+            <Button fx:id="redoBtn" styleClass="tool-button" text="Повторить"/>
             <Button fx:id="lineToolBtn" styleClass="tool-button" text="Линия"/>
             <Button fx:id="rectToolBtn" styleClass="tool-button" text="Прямоугольник"/>
+            <Button fx:id="ellipseToolBtn" styleClass="tool-button" text="Эллипс"/>
+            <Button fx:id="textToolBtn" styleClass="tool-button" text="Текст"/>
             <Button fx:id="addDeviceToolBtn" styleClass="tool-button" text="Добавить прибор"/>
             <Separator/>
             <Label text="Выберите прибор:"/>
